--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,10 @@
     #pre-header {
         display: none;
     }
+
+    .slick-slider .item::before {
+        background: rgba(0, 0, 0, 0.65);
+    }
 }
 
 @media screen and (max-width: 768px) {
