Fixed mobile menu toggle bug

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -37,10 +37,10 @@
         left: 0;
         top: 45px;
         background-color: #fff;
-        padding: 10px;
         display: block;
         margin: 0 -15px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+        transition: 0s;
     }
 
     nav .nav-menu li a{
